--- a/ReviewFood/Views/BaiViet/Search.cshtml
+++ b/ReviewFood/Views/BaiViet/Search.cshtml
@@ -33,13 +33,11 @@
                                 <a href="/BaiViet/Index/@item.MaTinTuc">@item.NgayTao</a>
                             </div>
                         </div>
-                    </div> <!-- item-entry -->
-
-                </article> <!-- end article -->
+                    </div> 
+                </article>  
             }
-
-        </div> <!-- end entries -->
-    </div> <!-- end entries-wrap -->
+        </div>  
+    </div>
 
     <div class="row pagination-wrap">
         <div class="col-full">
