--- a/ReviewFood/Views/Home/Index.cshtml
+++ b/ReviewFood/Views/Home/Index.cshtml
@@ -25,19 +25,14 @@
                                         <li>@item.NgayTao</li>
                                     </ul>
                                 </div>
-                            </div> <!-- end entry__content -->
-
-                        </div> <!-- end entry -->
-
+                            </div> 
+                        </div> 
                     </div>
                 }
-
-            </div> <!-- end featured -->
-
-        </div> <!-- end col-full -->
+            </div> 
+        </div> 
     </div>
 </section>
-
 
 <section class="s-content">
 
@@ -68,16 +63,13 @@
                                 <a href="/BaiViet/Index/@item.MaTinTuc">@item.NgayTao</a>
                             </div>
                         </div>
-                    </div> <!-- item-entry -->
-
-                </article> <!-- end article -->
+                    </div> 
+                </article> 
             }
-
-        </div> <!-- end entries -->
-    </div> <!-- end entries-wrap -->
-
-</section> <!-- end s-content -->
-<footer class="s-footer">
+        </div> 
+    </div> 
+</section>  
+<footer class="s-footer  background: #111860;">
 
     <div class="s-footer__main">
         <div class="row">
@@ -90,10 +82,9 @@
                     Trang web Review Đồ Ăn Hàng Đầu Việt Nam
                 </p>
 
-            </div> <!-- end s-footer__about -->
+            </div>  
         </div>
-    </div> <!-- end s-footer__main -->
-
+    </div>  
     <div class="s-footer__bottom">
         <div class="row">
 
@@ -116,23 +107,19 @@
                     </li>
                 </ul>
             </div>
-
             <div class="col-six">
                 <div class="s-footer__copyright">
                     <span>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                       
                         Copyright &copy; Review Do An Designer
-
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </span>
                 </div>
             </div>
-
         </div>
-    </div> <!-- end s-footer__bottom -->
+    </div>  
 
     <div class="go-top">
         <a class="smoothscroll" title="Back to Top" href="#top"></a>
     </div>
 
-</footer> <!-- end s-footer -->
+</footer>  
