--- a/ReviewFood/Views/TaiKhoan/Create.cshtml
+++ b/ReviewFood/Views/TaiKhoan/Create.cshtml
@@ -47,7 +47,7 @@
     <div class="form-inner">
         <form name="contactForm" id="contactForm" method="post" action="/TaiKhoan/Create" autocomplete="off">
             <div class="field">
-                <input name="TenDangNhap" id="cName" class="full-width" placeholder="Mời nhập tên tài khoản*" value="" type="text" required>
+                <input name="TenDangNhap" id="cName" class="full-width" placeholder="Mời nhập tên tài khoản" value="" type="text" required>
             </div>
             <div class="field">
                 <input name="HoTen" id="cName" class="full-width" placeholder="Họ và Tên của bạn" value="" type="text" required>
@@ -74,7 +74,7 @@
                 <input name="NgaySinh" id="cName" class="full-width" placeholder="Ngày Sinh" value="" type="date" required>
             </div>
             <br />
-            <a href="/TaiKhoan/Login">Chưa đã có tài khoản? Đăng nhập ngay</a>
+            <a href="/TaiKhoan/Login">Bạn đã có tài khoản? Đăng nhập ngay</a>
             <br />
             <br />
             <input name="submit" id="submit" class="btn btn--primary btn-wide btn--large full-width" value="Create" type="submit" href="/TaiKhoan/Create">
