--- a/ReviewFood/Views/TaiKhoan/Edit.cshtml
+++ b/ReviewFood/Views/TaiKhoan/Edit.cshtml
@@ -26,9 +26,10 @@
     /* Định dạng hộp chứa card */
     .card {
         background-color: #f8f8f8;
-        border: 1px solid #e5e5e5;
         border-radius: 3px;
         padding: 20px;
+        padding-bottom: 199px;
+        padding-top: 90px;
     }
 
     .card-primary {
