--- a/ReviewFood/Views/TaiKhoan/Login.cshtml
+++ b/ReviewFood/Views/TaiKhoan/Login.cshtml
@@ -10,10 +10,10 @@
     <div class="form-inner">
         <form name="contactForm" id="contactForm" method="post" action="/TaiKhoan/Login" autocomplete="off">
             <div class="field">
-                <input name="TenDangNhap" id="cName" placeholder="Your Name*" type="text" required>
+                <input name="TenDangNhap" id="cName" placeholder="Mời nhập tên tài khoản" type="text" required>
             </div>
             <div class="field">
-                <input name="MatKhau" placeholder="Your Password*" value="" type="password" required>
+                <input name="MatKhau" placeholder="Mời nhập mật khẩu" value="" type="password" required>
             </div>
             <br />
             <a href="/TaiKhoan/Create">Chưa có tài khoản? Đăng ký ngay</a>
