--- a/ReviewFood/Areas/Admin/Views/Home/Index.cshtml
+++ b/ReviewFood/Areas/Admin/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
                  </div>
                  <div class="card-wrap">
                      <div class="card-header">
-                         <h4><a href="@Url.Action("Index", "DanhMucCha")">Tổng số Danh mục cha</a></h4>
+                         <h4><a href="@Url.Action("Index", "DanhMucCha")">Tổng số Danh mục môt</a></h4>
                      </div>
                      <div class="card-body">
                          @Count[0]
@@ -30,7 +30,7 @@
                  </div>
                  <div class="card-wrap">
                      <div class="card-header">
-                         <h4><a href="@Url.Action("Index", "DanhMuc")">Tổng số Danh mục</a></h4>
+                         <h4><a href="@Url.Action("Index", "DanhMuc")">Tổng số Danh mục hai</a></h4>
                      </div>
                      <div class="card-body">
                          @Count[1]
