--- a/ReviewFood/Content/css/main2.css
+++ b/ReviewFood/Content/css/main2.css
@@ -674,6 +674,7 @@ form,
 img {
     width: 1200px;
     height: auto;
+/*    margin: auto;*/
 }
 /* dots pulse */
 .dots-pulse > div {
@@ -1397,54 +1398,6 @@ input[type="button"] {
     }
 
 /* ------------------------------------------------------------------- 
- * responsive:
- * reusable and common theme styles
- * ------------------------------------------------------------------- */
-@media only screen and (max-width:1200px) {
-    .display-1 {
-        font-size: 4.5rem;
-    }
-}
-
-@media only screen and (max-width:1000px) {
-    .display-1 {
-        font-size: 4.2rem;
-    }
-}
-
-@media only screen and (max-width:800px) {
-    .display-1 {
-        font-size: 3.6rem;
-    }
-
-    .display-1--with-line-sep::before {
-        width: 180px;
-    }
-}
-
-@media only screen and (max-width:700px) {
-    .display-1 {
-        font-size: 3.5rem;
-    }
-}
-
-@media only screen and (max-width:500px) {
-    .display-1 {
-        font-size: 3.3rem;
-    }
-
-    .lead.drop-cap:first-letter {
-        font-size: 7.5rem;
-    }
-}
-
-@media only screen and (max-width:400px) {
-    .display-1 {
-        font-size: 3rem;
-    }
-}
-
-/* ------------------------------------------------------------------- 
  * ## close button for search and mobile navigation 
  * ------------------------------------------------------------------- */
 .header__overlay-close {
@@ -1824,21 +1777,21 @@ input[type="button"] {
 /* ------------------------------------------------------------------- 
  * ## header-search
  * ------------------------------------------------------------------- */
-.header__search {
+./*header__search {
     display: block;
     text-align: center;
     background-color: #FFFFFF;
     opacity: 0;
     visibility: hidden;
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    -webkit-transition: all 0.3s ease-in-out;
+    top: 50px;
+    left: 750px;
+    width: 40%;
+    height: 30%;*/
+ /*   -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    z-index: 900;
-}
+    z-index: 900;*/
+/*}
 
 .header__search-form {
     width: 100%;
@@ -1881,36 +1834,36 @@ input[type="button"] {
         text-align: center;
     }
 
-        .header__search-form input[type="search"]::-webkit-input-placeholder {
+        .header__search-form input[type="search"]::-webkit-input-placeholder {*/
             /* WebKit, Blink, Edge */
-            color: #000000;
+            /*color: #000000;
         }
 
-        .header__search-form input[type="search"]:-moz-placeholder {
+        .header__search-form input[type="search"]:-moz-placeholder {*/
             /* Mozilla Firefox 4 to 18 */
-            color: #000000;
+            /*color: #000000;
             opacity: 1;
         }
 
-        .header__search-form input[type="search"]::-moz-placeholder {
+        .header__search-form input[type="search"]::-moz-placeholder {*/
             /* Mozilla Firefox 19+ */
-            color: #000000;
+            /*color: #000000;
             opacity: 1;
         }
 
-        .header__search-form input[type="search"]:-ms-input-placeholder {
+        .header__search-form input[type="search"]:-ms-input-placeholder {*/
             /* Internet Explorer 10-11 */
-            color: #000000;
+            /*color: #000000;
         }
 
-        .header__search-form input[type="search"]::-ms-input-placeholder {
+        .header__search-form input[type="search"]::-ms-input-placeholder {*/
             /* Microsoft Edge */
-            color: #000000;
+            /*color: #000000;
         }
 
-        .header__search-form input[type="search"]::placeholder {
+        .header__search-form input[type="search"]::placeholder {*/
             /* Most modern browsers support this now. */
-            color: #000000;
+            /*color: #000000;
         }
 
         .header__search-form input[type="search"].placeholder {
@@ -1932,7 +1885,7 @@ body.search-is-visible {
 .search-is-visible .header__search {
     opacity: 1;
     visibility: visible;
-}
+}*/
 
 /* ------------------------------------------------------------------- 
  * ## header-toggle
