--- a/ReviewFood/Views/Shared/MenuView.cshtml
+++ b/ReviewFood/Views/Shared/MenuView.cshtml
@@ -132,6 +132,6 @@
 
 
     </ul> <!-- end header__nav -->
-    <a href="#0" title="Close Menu" class="header__overlay-close close-mobile-menu">Close</a>
+    @*<a href="#0" title="Close Menu" class="header__overlay-close close-mobile-menu">Close</a>*@
 
 </nav>
