--- a/ReviewFood/Views/Home/Index.cshtml
+++ b/ReviewFood/Views/Home/Index.cshtml
@@ -111,7 +111,7 @@
                 <div class="s-footer__copyright">
                     <span>
                        
-                        Copyright &copy; Review Do An Designer
+                        Copyright Review Do An Designer
                     </span>
                 </div>
             </div>
