--- a/ReviewFood/Views/Shared/_Layout.cshtml
+++ b/ReviewFood/Views/Shared/_Layout.cshtml
@@ -23,8 +23,11 @@
     <script src="~/Scripts/js/modernizr.js"></script>
     <!-- favicons
     ================================================== -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    @*<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">*@
+    @*<link rel="icon" href="favicon.ico" type="image/x-icon">*@
+
+
+
 
 </head>
 
@@ -48,6 +51,9 @@
 </style>
 
 <body id="top">
+
+    <script>!function (s, u, b, i, z) { var o, t, r, y; s[i] || (s._sbzaccid = z, s[i] = function () { s[i].q.push(arguments) }, s[i].q = [], s[i]("setAccount", z), r = ["widget.subiz.net", "storage.googleapis" + (t = ".com"), "app.sbz.workers.dev", i + "a" + (o = function (k, t) { var n = t <= 6 ? 5 : o(k, t - 1) + o(k, t - 3); return k !== t ? n : n.toString(32) })(20, 20) + t, i + "b" + o(30, 30) + t, i + "c" + o(40, 40) + t], (y = function (k) { var t, n; s._subiz_init_2094850928430 || r[k] && (t = u.createElement(b), n = u.getElementsByTagName(b)[0], t.async = 1, t.src = "https://" + r[k] + "/sbz/app.js?accid=" + z, n.parentNode.insertBefore(t, n), setTimeout(y, 2e3, k + 1)) })(0)) }(window, document, "script", "subiz", "acrrpikjmlxjaudfzgkn");</script>
+
     <header class="s-header header">
         <div class="header__logo">
             <a class="logo" href="/">REVIEWFOOD</a>
@@ -59,7 +65,7 @@
             <form role="search" method="get" class="header__search-form" action="/BaiViet/Search">
                 <label>
                     @*<span class="hide-content">Search for:</span>*@
-                   
+
                     <input type="search" class="search-field" placeholder="Keywords" value="" name="keywork" title="" autocomplete="off">
                 </label>
                 <input type="submit" class="search-submit" value="Search">
@@ -73,8 +79,34 @@
 
     </header>
 
-
     @RenderBody()
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- Java Script
     ================================================== -->
