--- a/ReviewFood/Content/css/main2.css
+++ b/ReviewFood/Content/css/main2.css
@@ -1,65 +1,4 @@
-﻿/* =================================================================== 
- *
- *  Wordsmith v1.0 Main Stylesheet
- *  07-06-2018
- *  ------------------------------------------------------------------
- *
- *  TOC:
- *  # base style overrides
- *    ## links
- *  # typography & general theme styles
- *    ## Lists
- *    ## responsive video container
- *    ## floated image
- *    ## tables
- *    ## Spacing 
- *  # preloader 
- *  # forms 
- *    ## Style Placeholder Text
- *    ## Change Autocomplete styles in Chrome
- *  # buttons
- *  # additional components
- *    ## alert box 
- *    ## additional typo styles 
- *    ## pagination 
- *  # reusable and common theme styles
- *    ## close button for search and mobile navigation 
- *    ## entries list
- *  # header
- *    ## header logo
- *    ## header search trigger
- *    ## header-search
- *    ## header-toggle
- *    ## main navigation
- *    ## main navigation on large screens
- *  # featured section
- *  # content
- *    ## page and single entry main content
- *  # extra
- *    ## popular posts
- *    ## link list
- *  # footer
- *    ## subscribe form
- *    ## copyright
- *    ## footer social
- *    ## go to top
- *  # blog styles and blog components
- *    ## entry media
- *    ## entry header
- *    ## post taxonomies
- *    ## author profile
- *    ## blog single entry navigation
- *    ## comments 
- *  # page styles and page components
- *    ## contact page
- *
- * =================================================================== */
-
-
-/* ===================================================================
- * # base style overrides
- *
- * ------------------------------------------------------------------- */
+﻿
 html {
     font-size: 10px;
 }
@@ -433,26 +372,6 @@ dd {
     margin: 0 0 0 2rem;
 }
 
-/* ------------------------------------------------------------------- 
- * ## responsive video container
- * ------------------------------------------------------------------- */
-.video-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    overflow: hidden;
-}
-
-    .video-container iframe,
-    .video-container object,
-    .video-container embed,
-    .video-container video {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
 
 /* ------------------------------------------------------------------- 
  * ## floated image
@@ -1777,7 +1696,7 @@ input[type="button"] {
 /* ------------------------------------------------------------------- 
  * ## header-search
  * ------------------------------------------------------------------- */
-./*header__search {
+.header__search {
     display: block;
     text-align: center;
     background-color: #FFFFFF;
@@ -1787,11 +1706,11 @@ input[type="button"] {
     top: 50px;
     left: 750px;
     width: 40%;
-    height: 30%;*/
- /*   -webkit-transition: all 0.3s ease-in-out;
+    height: 30%;
+    -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    z-index: 900;*/
-/*}
+    z-index: 900;
+}
 
 .header__search-form {
     width: 100%;
@@ -1834,36 +1753,36 @@ input[type="button"] {
         text-align: center;
     }
 
-        .header__search-form input[type="search"]::-webkit-input-placeholder {*/
-            /* WebKit, Blink, Edge */
-            /*color: #000000;
+        .header__search-form input[type="search"]::-webkit-input-placeholder {
+             WebKit, Blink, Edge 
+            color: #000000;
         }
 
-        .header__search-form input[type="search"]:-moz-placeholder {*/
-            /* Mozilla Firefox 4 to 18 */
-            /*color: #000000;
+        .header__search-form input[type="search"]:-moz-placeholder {
+             Mozilla Firefox 4 to 18 
+            color: #000000;
             opacity: 1;
         }
 
-        .header__search-form input[type="search"]::-moz-placeholder {*/
-            /* Mozilla Firefox 19+ */
-            /*color: #000000;
+        .header__search-form input[type="search"]::-moz-placeholder {
+             Mozilla Firefox 19+ 
+            color: #000000;
             opacity: 1;
         }
 
-        .header__search-form input[type="search"]:-ms-input-placeholder {*/
-            /* Internet Explorer 10-11 */
-            /*color: #000000;
+        .header__search-form input[type="search"]:-ms-input-placeholder {
+             Internet Explorer 10-11 
+            color: #000000;
         }
 
-        .header__search-form input[type="search"]::-ms-input-placeholder {*/
-            /* Microsoft Edge */
-            /*color: #000000;
+        .header__search-form input[type="search"]::-ms-input-placeholder {
+             Microsoft Edge 
+            color: #000000;
         }
 
-        .header__search-form input[type="search"]::placeholder {*/
-            /* Most modern browsers support this now. */
-            /*color: #000000;
+        .header__search-form input[type="search"]::placeholder {
+             Most modern browsers support this now. 
+            color: #000000;
         }
 
         .header__search-form input[type="search"].placeholder {
@@ -1885,7 +1804,7 @@ body.search-is-visible {
 .search-is-visible .header__search {
     opacity: 1;
     visibility: visible;
-}*/
+}
 
 /* ------------------------------------------------------------------- 
  * ## header-toggle
